# astronomy_app

./: .gitignore  README.md  astro_app.py  pyproject.toml  requirements.txt
multi_sector/: multi_setor.py
