[tool.poetry]
name = "astronomy-app"
version = "0.1.0"
description = ""
authors = ["Scott Snider <scottsnider@cogeco.ca>"]
readme = "README.md"
packages = [{ include = "astronomy_app" }]  # optional if you have a package folder

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = ">=1.46.0,<2.0.0"
watchdog = ">=6.0.0,<7.0.0"
ipykernel = ">=6.29.5,<7.0.0"
astropy = ">=7.1.0,<8.0.0"
astroquery = ">=0.4.10,<0.5.0"
lightkurve = ">=2.5.1,<3.0.0"
ipywidgets = ">=8.1.7,<9.0.0"
plotly = ">=6.1.2,<7.0.0"
nbformat = ">=5.10.4,<6.0.0"
llvmlite = ">=0.44.0,<0.45.0"
numba = ">=0.61.2,<0.62.0"
numpy = ">=1.24,<2.3"
wotan = ">=1.10,<2.0"
transitleastsquares = "^1.32"
exoplanet = "^0.6.0"
pymc = "^5.23.0"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"